refactor: added new features to HTML

--- a/html/gatoWeb.html
+++ b/html/gatoWeb.html
@@ -7,25 +7,30 @@
     <title>GatoMate</title>
   </head>
   <body>
-    <div class="gato-fruta">
-      <div class="cabeza">
-        <div class="oreja oreja-izquierda"></div>
-        <div class="oreja oreja-derecha"></div>
-        <div class="cara">
-          <div class="ojo izquierdo"></div>
-          <div class="ojo derecho"></div>
+    <div class="background">
+      <div class="tomate">
+        <div class="cabeza">
+          <div class="oreja oreja-izquierda"></div>
+          <div class="oreja oreja-derecha"></div>
+            <div class="ojo ojo-izquierdo"></div>
+            <div class="ojo ojo-derecho"></div>
+            <div class="pupila pupila-derecha"></div>
+            <div class="pupila pupila-izquierda"></div>
+          </div>
+          <div class="pierna">
+            <div class="pierna-delantera"></div>
+            <div class="pierna-delantera"></div>
+            <div class="pierna-trasera"></div>
+            <div class="pierna-trasera"></div>
+          </div>
+          <div class="cuerpo">
+            <div class="cola"></div>
+            <div class="hoja hoja1"></div>
+            <div class="hoja hoja2"></div>
+            <div class="hoja hoja3"></div>
+          </div>
         </div>
       </div>
-      <div class="cuerpo">
-        <div class="pierna pierna-delantera"></div>
-        <div class="pierna pierna-delantera"></div>
-        <div class="pierna pierna-trasera"></div>
-        <div class="pierna pierna-trasera"></div>
-        <div class="hoja1"></div>
-        <div class="hoja2"></div>
-        <div class="hoja3"></div>
-      </div>
-      <div class="cola"></div>
     </div>
   </body>
 </html>
